Downgrade to Java 8.0